--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
 
   <body>
     <main class="container mx-auto mt-28 px-5 flex">
+
       <%= yield %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      
     </main>
   </body>
 </html>
