--- a/app/views/blog_posts/_blog_post.html.erb
+++ b/app/views/blog_posts/_blog_post.html.erb
@@ -26,7 +26,11 @@
 
   <% if action_name != "show" %>
     <%= link_to "Show this blog post", blog_post, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+
+    <%if current_user.writer? %>
     <%= link_to 'Edit this blog post', edit_blog_post_path(blog_post), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
     <hr class="mt-6">
+    <%end%>
+    
   <% end %>
 </div>
