--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -5,7 +5,9 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Blog posts</h1>
+    <%if current_user.writer? %>
     <%= link_to 'New blog post', new_blog_post_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%end%>
   </div>
 
   <div id="blog_posts" class="min-w-full">
