--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
   <body>
     <main class="container mx-auto mt-28 px-5">
 
+     <%if user_signed_in? %>
+      <%= button_to "logout", destroy_user_session_path, method: :delete  %>
+     <%end%>
+
       <%= yield %>
       <% if notice.present? %>
       <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
