Hide edit button from other writers

--- a/app/views/blog_posts/_blog_post.html.erb
+++ b/app/views/blog_posts/_blog_post.html.erb
@@ -1,5 +1,5 @@
 <div id="<%= dom_id blog_post %>">
-  
+
     <%= image_tag blog_post.illustration %>
 
   <p class="my-5">
@@ -26,8 +26,10 @@
     <%= link_to "Show this blog post", blog_post, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 
     <%if current_user.writer? %>
+      <% if blog_post.user == current_user %>
     <%= link_to 'Edit this blog post', edit_blog_post_path(blog_post), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
     <hr class="mt-6">
+      <% end %>
     <% end %>
 
   <% end %>
