--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="h-[100vh]">
   <head>
     <title>Doctoblog<%= yield :title %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -20,27 +20,25 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
   </head>
 
-  <body class="bg-azul">
+  <body class="bg-azul flex flex-col h-[100vh] ">
 
-    <main class="container mx-auto mt-28 px-5">
+    <main class="flex-grow-1 flex-shrink-0">
 
-      <!-- TO DO Navbar-->
-      <%# <nav class="fixed h-20 top-0 z-50 w-full bg-federalblue text-beige flex justify-between py-5 px-8 shadow [&>div]:grid [&>div]:grid-flow-col [&>div]:gap-36 [&>div]:items-center [&>div]:px-5 lg:[&>div]:px-16"> %>
+      <nav class="fixed h-16 top-0 z-50 w-full bg-federalblue text-beige flex justify-around shadow [&>div]:grid [&>div]:grid-flow-col [&>div]:items-center">
 
+        <div>
+          <%= link_to image_tag('logo.png'), root_path, class: 'w-16 lg:w-20' %>
+        </div>
 
-        <%# <div>
-          <%= link_to image_tag('logo.png'), root_path, class: "w-16 lg:w-20" %>
-        <%# </div> %>
+        <div>
+          <span class="hidden sm:block">Welcome on <i>Doctoblog<i>, internal blog of L.A. US Hospital</span>
+        </div>
 
-        <%# <div>
-          <span>Welcome on Doctoblog, internal blog of L.A. US Hospital</span>
-        </div> %>
-
-        <%# <div>
-          <%= link_to "Login ✅ ", root_path, class: '' %>
-          <%# <%= link_to "Signup 🚀", contact_path, class: '' %>
-        <%# <div> %>
-      <%# </nav> %>
+        <div>
+          <%= link_to "Login ✅ ", root_path, class: '' %> |
+          <%= link_to "Signup 🚀", class: '' %>
+        <div>
+      </nav>
 
 
       <div class="relative flex flex-col items-center text-center">
