--- a/app/views/static_pages/_footer.html.erb
+++ b/app/views/static_pages/_footer.html.erb
@@ -1,14 +1,13 @@
 <footer class="bg-beige py-5 w-ful">
 
-  <section class="grid grid-cols-1 lg:grid-cols-3 justify-between items-center px-20">
+  <section class="grid grid-cols-3 justify-center items-center px-20">
 
    <%# 1st block %>
-    <div>
+
       <p class="text-federalblue">Access strictly for staff</p>
-    </div>
 
     <%# 2d block %>
-    <div class="justify-center text-center">
+    <div class="flex flex-col items-center justify-center text-center">
       <h3 class="text-2xl pb-5 text-federalblue">Follow us</h3>
        <%= image_tag 'logo.png', class: 'w-36' %>
 
@@ -19,7 +18,7 @@
         </a>
 
         <a href="#">
-            <i class="ri-facebook-circle w-6" alt="icône fb"</i>
+            <i class="ri-facebook-circle-fill w-6" alt="icône fb"></i>
         </a>
 
         <a href="#">
@@ -27,19 +26,13 @@
         </a>
       </div>
 
-    <div>
-
-    <%# 3d block %>
-    <div>
-      <a href="mailto:doctoblog@question.net" class="text-federalblue">doctoblog@question.net</a>
     </div>
-
-
+      <a href="mailto:doctoblog@question.net" class="text-federalblue text-center">doctoblog@question.net</a>
   </section>
 
 
     <div>
-      <hr class="w-36 mx-auto mb-5 bg-federalblue">
+      <hr class="w-36 h-1 mx-auto mb-5 bg-federalblue">
       <p class="text-center text-federalblue mt-8 text-base md:mt-0">&copy; 2023 L.A. Hospital, all rights reserved</p>
     </div>
 
