--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   <body class="bg-azul flex flex-col h-screen">
 
     <main class="flex-grow">
-      <nav class="fixed h-16 top-0 z-50 w-full bg-federalblue text-beige flex justify-around shadow [&>div]:grid [&>div]:grid-flow-col [&>div]:items-center">
+      <nav class="fixed h-16 top-0 z-50 w-full bg-federalblue text-beige flex justify-around items-center shadow [&>div]:grid [&>div]:grid-flow-col [&>div]:items-center">
 
         <div>
           <%= link_to image_tag('logo.png'), root_path, class: 'w-16 lg:w-20' %>
@@ -34,9 +34,9 @@
         </div>
 
         <div>
-          <%= link_to "Login ✅ ", root_path, class: '' %> |
-          <%= link_to "Signup 🚀", class: '' %>
-        <div>
+          <%= link_to "Login ✅ ", new_user_session_path, class: '' %> |
+          <%= link_to "Signup 🚀", new_user_registration_path, class: '' %>
+        </div>
       </nav>
 
 
@@ -58,7 +58,7 @@
       </div>
 
 
-      <div class="pt-24">
+      <div class="pt-24 flex flex-col items-center">
         <%= yield %>
       </div>
     </main>
