--- a/app/views/blog_posts/_blog_post.html.erb
+++ b/app/views/blog_posts/_blog_post.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id blog_post %>">
+<div id="<%= dom_id blog_post %>" class="flex flex-col items-center p-16">
 
     <%= image_tag blog_post.illustration %>
 
