--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="w-full">
+<div class="w-full flex flex-col justify-center">
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Blog posts</h1>
