--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,55 +1,62 @@
-<h2>Sign up</h2>
+<div id="background-wave" class="w-full flex flex-col items-center">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <h2>Sign up</h2>
 
-
-  <div class="field">
-    <%= f.label :job %><br />
-    <%= f.select(  :job,
-                  options_for_select(User.job_types.map {|key, value| [I18n.t(key), value]}),
-                  { include_blank: 'Select' }
-                ) %>
-  </div>
-
-
-
-  <div class="field">
-    <%= f.label :firstname %><br />
-    <%= f.text_field :firstname, autocomplete: "firstname" %>
-  </div>
-
-
-  <div class="field">
-      <%= f.label :lastname %><br />
-      <%= f.text_field :lastname, autocomplete: "lastname" %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
 
     <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autocomplete: "email" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      <%= f.label :job %><br />
+      <%= f.select(  :job,
+                    options_for_select(User.job_types.map {|key, value| [I18n.t(key), value]}),
+                    { include_blank: 'Select' }
+                  ) %>
     </div>
 
 
 
+    <div class="field">
+      <%= f.label :firstname %><br />
+      <%= f.text_field :firstname, autocomplete: "firstname" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+    <div class="field">
+        <%= f.label :lastname %><br />
+        <%= f.text_field :lastname, autocomplete: "lastname" %>
+    </div>
+
+
+      <div class="field">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autocomplete: "email" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </div>
+
+
+
+
+    <div class="actions">
+      <%= f.submit "Sign up" %>
+    </div>
+  <% end %>
+
+  <%= render "devise/shared/links" %>
+
+
+</div>
+
+
