--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -20,33 +20,132 @@
   }
 
   h2 {
-      @apply text-3xl;
+      @apply text-3xl text-white;
   }
 
   h3 {
       @apply sm:text-base md:text-xl lg:text-2xl;
   }
 
-  h4 {
-      @apply sm:text-sm md:text-base lg:text-xl;
-  }
-
-  p {
-      @apply sm:text-sm md:text-base;
-  }
-
 }
 
 
-#background-azul {
-  @apply bg-azul;
+/* Background page by default */
+#background-by-default {
+  @apply bg-gradient-to-r from-azul to-beige;
 }
 
 
-form .actions {
-  @apply flex flex-col items-center;
+
+/* Devise customization forms => for new session and registration views */
+.devise {
+  @apply flex flex-col items-center py-12; /* container page */
 }
 
-form input[type="submit"] {
-  @apply bg-white p-4 mt-2 m-auto rounded text-blue-500 hover:text-blue-700;
+.devise form {
+  @apply w-[70vw] md:w-[20vw] flex flex-col items-stretch;
 }
+
+
+.devise input:not([type=checkbox]) {
+  @apply block shadow rounded-md border border-federalblue outline-none px-3 py-2 mb-4 w-full text-azul focus:ring-azul transition focus:outline-none;
+}
+
+
+.devise input[type=checkbox] {
+  @apply rounded;
+}
+
+
+.devise input[type=checkbox]:checked {
+  @apply bg-federalblue;
+}
+
+
+.devise a {
+  @apply underline text-white font-light;
+}
+
+
+.devise button, input[type=submit] {
+  @apply bg-pink-300 mt-8 text-federalblue hover:bg-pink-400 hover:ring-1 hover:ring-federalblue hover:text-white hover:tracking-wide hover:text-lg transition duration-500 ease-in-out ;
+}
+
+
+
+
+
+
+/* Customization form for edit view */
+.edit-form {
+  @apply flex flex-col items-center py-12; /* container page */
+}
+
+.edit-form input {
+  @apply block shadow rounded-md border border-federalblue outline-none px-3 py-2 mb-4 w-full text-azul focus:ring-azul transition focus:outline-none;
+}
+
+
+.edit-form a {
+  @apply underline text-white font-light;
+}
+
+
+
+
+/* Customization form for registration + edit views */
+select {
+  @apply block shadow rounded-md border border-federalblue outline-none px-3 py-2 mb-4 w-full text-azul focus:ring-azul transition focus:outline-none;
+}
+
+
+
+/* Customization form for all views */
+.field {
+  @apply flex flex-col items-stretch text-center;  /* Label + input */
+}
+
+
+label {
+  @apply block text-left text-federalblue font-normal;
+}
+
+
+
+
+/* Blog Post search view => Customization input + button type input */
+#blog_post_search { /* id DOM for the form */
+  @apply flex flex-col text-center items-center sm:flex-row sm:space-x-4;
+}
+
+
+#q_title_or_subtitle_or_body_cont { /* id DOM for input search */
+  @apply block shadow rounded-sm border border-federalblue outline-none px-3 py-2 w-full my-4 text-azul focus:ring-azul transition focus:outline-none;
+}
+
+
+
+ #blog_post_search input[type=submit] {
+  @apply m-auto px-3 py-2 rounded-lg bg-pink-300 text-federalblue hover:bg-pink-400 hover:ring-1 hover:ring-federalblue hover:text-white hover:tracking-wide hover:text-lg transition duration-500 ease-in-out ;
+}
+
+
+
+
+/* Blog Post show for comment => Customization input text + button type input  */
+.new_commment { /* Class DOM for the form comment */
+  @apply flex flex-col text-center items-center md:flex-row md:space-x-8 ;
+}
+
+
+
+#comment_content input[type=text] { /* id DOM for input comment */
+  @apply block shadow border border-federalblue outline-none px-3 py-2 my-4 text-azul focus:ring-azul transition focus:outline-none;
+}
+
+
+.new_comment input[type=submit] {
+  @apply m-auto px-6 py-11 hover:py-10 rounded-r-lg bg-pink-300 text-federalblue hover:bg-pink-400 hover:ring-1 hover:ring-federalblue hover:text-white hover:tracking-wide hover:text-lg transition duration-500 ease-in-out ;
+}
+
+
