--- a/app/views/blog_posts/_blog_post.html.erb
+++ b/app/views/blog_posts/_blog_post.html.erb
@@ -1,33 +1,42 @@
-<div id="<%= dom_id blog_post %>" class="flex flex-col items-center p-16">
+<div id="<%= dom_id blog_post %>" class="flex flex-col items-center mx-auto p-5 sm:p-10 md:p-16 w-[70vw]">
+  <% if blog_post.illustration.attached? %>
+    <%= image_tag blog_post.illustration, class: 'rounded-md mb-2 object-cover overflow-hidden h-[400px] w-[800px] sm:h-[500px] sm:w-[900px] md:h-[600px] md:w-[1000px]' %>
+  <% end %>
 
-    <%= image_tag blog_post.illustration %>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Title:</strong>
+  <%# title%>
+  <p class="mt-5 text-3xl text-beige text-center">
+    <strong class="block font-medium mb-1"></strong>
     <%= blog_post.title %>
   </p>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Subtitle:</strong>
+
+  <%# subtitle %>
+  <p class="mt-3 text-2xl text-beige text-center">
+    <strong class="block font-medium mb-1"></strong>
     <%= blog_post.subtitle %>
   </p>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Body:</strong>
+  <%# body %>
+  <p class="mt-8 w-[70vw]">
+    <strong class="block font-medium mb-1"></strong>
     <%= blog_post.body %>
   </p>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">User:</strong>
+
+  <%# user // Author %>
+  <p class="my-5 text-center leading-tight">
+    <strong class="block font-normal mb-1">Author Mr./Mrs.</strong>
     <%= blog_post.user.lastname %>
   </p>
 
+
   <% if action_name != "show" %>
-    <%= link_to "Show this blog post", blog_post, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to "Show this blog post", blog_post, class: "rounded-lg py-3 px-5 mb-4 bg-gray-100 inline-block font-medium hover:bg-beige" %>
 
     <%if current_user.writer? %>
       <% if blog_post.user == current_user %>
-    <%= link_to 'Edit this blog post', edit_blog_post_path(blog_post), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to 'Edit this blog post', edit_blog_post_path(blog_post), class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium hover:bg-beige" %>
     <hr class="mt-6">
       <% end %>
     <% end %>
