--- a/app/views/blog_posts/new.html.erb
+++ b/app/views/blog_posts/new.html.erb
@@ -1,7 +1,7 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">New blog post</h1>
+<div class="mx-auto px-8 w-full md:w-2/3 ">
+  <h1 class="font-bold text-4xl">Create a new blog post</h1>
 
   <%= render "form", blog_post: @blog_post %>
 
-  <%= link_to 'Back to blog posts', blog_posts_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to 'Back to blog posts', blog_posts_path, class: "mb-12 mt-4 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium hover:bg-beige" %>
 </div>
