--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,25 +1,64 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%# SEO %>
+<% content_for :meta_tags do %>
+  <meta name="description" content="DoctoBlog profile">
+<% end %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<% content_for :title do %>
+  Your profile
+<% end %>
+
+
+<div class="edit-form pb-0">
+
+  <h2 class="top-1">Change your profile</h2>
+
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+
+
+
+  <div class="field mt-6">
+      <%= f.label :job %><br />
+      <%= f.select(  :job,
+                    options_for_select(User.job_types.map {|key, value| [I18n.t(key), value]}),
+                    { include_blank: 'Select' }
+                  ) %>
+  </div>
+
+
+  <div class="field">
+    <%= f.label :firstname %><br />
+    <%= f.text_field :firstname, autocomplete: "firstname", required: true, pattern: "^[a-zA-Z]+(([',. -][a-zA-Z ])?[a-zA-Z]*)*$" %>
+  </div>
+
+
+  <div class="field">
+    <%= f.label :lastname %><br />
+    <%= f.text_field :lastname, autocomplete: "lastname", required: true, pattern: "^[a-zA-Z]+(([',. -][a-zA-Z ])?[a-zA-Z]*)*$" %>
+  </div>
+
+
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
+
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :password %> <i class="flex text-start">(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <em class="flex text-start mb-4"><%= @minimum_password_length %> characters minimum</em>
     <% end %>
   </div>
+
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
@@ -33,15 +72,15 @@
 
 
 
-
-
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
-<% end %>
+  <% end %>
 
-<h3>Cancel my account</h3>
 
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
+  <div class="text-center text-white font-light">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: 'text-white hover:text-red-500 font-bold' %></div>
 
-<%= link_to "Back", :back %>
+  <%= link_to "Back", :back %>
+  </div>
+
+</div>
