add class to resolve unwanted multiple lines on forms on Chrome and Safari

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -107,7 +107,7 @@ label {
 }
 
 
-.field br {
+.field br { /* To resolve unwanted multiple lines on Chrome and Safari on forms */
   @apply hidden;
 }
 
