--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -120,7 +120,7 @@ VANTA.GLOBE({
   color: '#E9EDDE',
   color2: '#07004D',
   size: 0.90,
-  backgroundColor: '#016FB9'
+  backgroundColor: '#016FB9',
 })
 </script>
 
