--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,7 +97,7 @@ VANTA.WAVES({
   scale: 1.00,
   scaleMobile: 1.00,
   color: "#016fb9",
-  shininess: 49.00,
+  shininess: 49.00,gc -m
   waveHeight: 28.50,
   waveSpeed: 0.40,
   zoom: 1.01
